# sysop

./: .gitignore  Cargo.toml  benchmarks.csv  generic_perf.sh  out.txt  plot copy 2.ipynb  plot.ipynb  plot_cs.ipynb  plot_tasks.ipynb  plot_threads.ipynb  stat_generic_task_1_1  system_info.txt  tasks  tester_output.txt  thread_vm.ipynb  trab.txt
bench/: start_tasks_1.txt  stat_generic_1024_1024_tasks.csv  stat_generic_1024_1024_threads.csv  stat_generic_1024_32768_tasks.csv  stat_generic_1024_32768_threads.csv  stat_generic_1024_4096_tasks.csv  stat_generic_1024_4096_threads.csv  stat_generic_1024_512kb_tasks.csv  stat_generic_1024_512kb_threads.csv  stat_generic_1024_8_tasks.csv  stat_generic_1024_8_threads.csv  stat_generic_12228_512kb_tasks.csv  stat_generic_12228_512kb_threads.csv  stat_generic_16384_1024_tasks.csv  stat_generic_16384_1024_threads.csv  stat_generic_16384_32768_tasks.csv  stat_generic_16384_32768_threads.csv  stat_generic_16384_4096_tasks.csv  stat_generic_16384_4096_threads.csv  stat_generic_16384_512kb_tasks.csv  stat_generic_16384_512kb_threads.csv  stat_generic_16384_8_tasks.csv  stat_generic_16384_8_threads.csv  stat_generic_16_1024_tasks.csv  stat_generic_16_1024_threads.csv  stat_generic_16_32768_tasks.csv  stat_generic_16_32768_threads.csv  stat_generic_16_4096_tasks.csv  stat_generic_16_4096_threads.csv  stat_generic_16_512kb_tasks.csv  stat_generic_16_512kb_threads.csv  stat_generic_16_8_tasks.csv  stat_generic_16_8_threads.csv  stat_generic_1_1024_tasks.csv  stat_generic_1_1024_threads.csv  stat_generic_1_1_tasks.csv  (+298 more)
src/: lib.rs
(+5 files in other folders)
