[package]
name = "sysop"
version = "0.1.0"
authors = ["Matheus Cruz <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
fastrand = "1.4.0"
lazy_static = "1.4.0"
futures = "0.3.14"
serde = {version = "1.0.125", features =["derive"]}
csv = "1.1"


[profile.release]
debug = true 